--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,6 @@
     "build": "vite build --watch",
     "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
-
   },
   "dependencies": {
     "js-cookie": "^3.0.5",
@@ -28,7 +27,9 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "redux-logger": "^3.0.6",
+    "tailwindcss": "^3.4.1",
     "vite": "^4.4.5",
     "vite-plugin-eslint": "^1.8.1"
   }
+  
 }
