--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,8 @@
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.15.0",
     "redux": "^4.2.1",
-    "redux-thunk": "^2.4.2"
+    "redux-thunk": "^2.4.2",
+    "reselect": "^5.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
@@ -30,5 +31,4 @@
     "vite": "^4.4.5",
     "vite-plugin-eslint": "^1.8.1"
   }
-
 }
